# OCaml-Hoare-Logic-Prover

./: FloydHoareSolver.ml  README.md  ocaml_setup.sh
fl_prover/: dune-project  fl_prover.opam
fl_prover/lib/: dune  floyd_hoare_solver.ml
fl_prover/outputs/: test1.txt  test1commands.txt
fl_prover/test/: dune
scripts/: ocaml_setup.sh
